objects/NVMContactWorld__Log__c.object
<CustomObject>
    <description>Container for diagnostic information recorded by a NewVoiceMedia package</description>
    <fields>
        <fullName>NVMContactWorld__Bucket__c</fullName>
        <description>Identifies the group of the exceptions</description>
        <externalId>true</externalId>
        <label>Bucket</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Detail__c</fullName>
        <description>Contains the detail of the log</description>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Hash__c</fullName>
        <description>Identifies the group of the exceptions</description>
        <externalId>true</externalId>
        <label>Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__LoggedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the User who recorded the log</description>
        <label>Logged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NewVoiceMedia_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Reference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique reference that can identify the log</description>
        <externalId>true</externalId>
        <label>Reference</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NewVoiceMedia Log</label>
    <nameField>
        <label>NewVoiceMedia Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewVoiceMedia Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>